grammar.js
    source_file: ($) => repeat($._root_element),

    _root_element: ($) =>
      choice(
        $.package_definition,
        $.library_package,
        $._definition,
        $._usage,
        $.import_statement,
        $.alias_statement,
        $.dependency,
        $.comment_statement,
        $.documentation,
        $.connect_statement,
      ),

    // =========================================================================
    // Packages
    // =========================================================================
    package_definition: ($) =>
      seq(
        repeat($.prefix_metadata),
        'package',
        optional($.identification),
        $.package_body,
      ),

    package_body: ($) =>
      choice(';', seq('{', repeat($._package_member), '}')),

    _package_member: ($) =>
      choice(
        $._definition,
        $._usage,
        $.actor_usage,
        $.import_statement,
        $.alias_statement,
        $.comment_statement,
        $.documentation,
        $.package_definition,
        $.library_package,
        $.dependency,
        $.allocate_statement,
        $.filter_statement,
        $.connect_statement,
        $.satisfy_statement,
        $.assert_statement,
        $.message_statement,
        $.shorthand_attribute,
      ),

    // Shorthand attribute assignment at package level: T1 = 10.0 [N * m];
    identification: ($) =>
      choice(
        seq($.short_name, optional($.name)),
        seq('id', choice($.string_literal, $.name), optional($.name)),
        $.name,
      ),

    name: ($) => choice($.identifier, $.quoted_name, alias('id', $.identifier)),

    part_definition: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        optional(choice('individual', 'variation')),
        'part',
        'def',
        optional($.identification),
        optional($.definition_specialization),
        $.structural_body,
      ),

    item_definition: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        optional('individual'),
        'item',
        'def',
        optional($.identification),
        optional($.definition_specialization),
        $.structural_body,
      ),

    port_definition: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        'port',
        'def',
        optional($.identification),
        optional($.definition_specialization),
        $.structural_body,
      ),

    action_definition: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        optional(choice('individual', 'variation')),
        'action',
        'def',
        optional($.identification),
        optional($.definition_specialization),
        $.action_body,
      ),

    constraint_definition: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        'constraint',
        'def',
        optional($.identification),
        optional($.definition_specialization),
        $.constraint_body,
      ),

    requirement_definition: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        optional('variation'),
        'requirement',
        'def',
        optional($.identification),
        optional($.definition_specialization),
        $.requirement_body,
      ),

    attribute_definition: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        optional('variation'),
        'attribute',
        'def',
        optional($.identification),
        optional($.definition_specialization),
        $.structural_body,
      ),

    enumeration_definition: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        'enum',
        'def',
        optional($.identification),
        optional($.definition_specialization),
        $.enumeration_body,
      ),

    connection_definition: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        'connection',
        'def',
        optional($.identification),
        optional($.definition_specialization),
        $.structural_body,
      ),

    interface_definition: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        'interface',
        'def',
        optional($.identification),
        optional($.definition_specialization),
        $.structural_body,
      ),

    allocation_definition: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        'allocation',
        'def',
        optional($.identification),
        optional($.definition_specialization),
        $.structural_body,
      ),

    use_case_definition: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        optional('variation'),
        'use',
        'case',
        optional('def'),
        optional($.identification),
        optional($.definition_specialization),
        $.requirement_body,
      ),

    case_definition: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        'case',
        'def',
        optional($.identification),
        optional($.definition_specialization),
        $.requirement_body,
      ),

    occurrence_definition: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        optional('individual'),
        'occurrence',
        'def',
        optional($.identification),
        optional($.definition_specialization),
        $.structural_body,
      ),

    verification_definition: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        optional('variation'),
        'verification',
        optional('def'),
        optional($.identification),
        optional($.definition_specialization),
        $.action_body,
      ),

    analysis_definition: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        optional(choice('individual', 'variation')),
        'analysis',
        optional('def'),
        optional($.identification),
        optional($.definition_specialization),
        $.action_body,
      ),

    individual_definition: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        'individual',
        'def',
        optional($.identification),
        optional($.definition_specialization),
        $.structural_body,
      ),

    parameter_usage: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        $.port_direction,
        optional(choice('part', 'individual', 'ref', 'calc', 'attribute', 'item', 'occurrence', 'action', 'constraint')),
        optional($.usage_declaration),
        $.usage_body,
      ),

    part_usage: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        optional(choice('then', 'first')),
        optional(choice('snapshot', 'timeslice', 'variation', 'individual')),
        optional('ref'),
        'part',
        optional($.usage_declaration),
        $.usage_body,
      ),

    port_direction: ($) => choice('in', 'out', 'inout'),

    action_usage: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        optional(choice('variation', 'variant')),
        optional(choice('first', 'then', 'loop')),
        optional('individual'),
        optional('ref'),
        'action',
        optional($.usage_declaration),
        optional(choice('terminate', $.accept_part, $.send_part)),
        $.action_body,
      ),

    action_body: ($) =>
      choice(
        ';',
        seq(
          optional(seq('while', $._expression)),
          '{',
          repeat(choice($._behavioral_member, $.opaque_body, $.textual_representation)),
          optional($._expression),
          '}',
          optional(seq('until', $._expression, ';')),
        ),
      ),

    constraint_usage: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        optional('ref'),
        'constraint',
        optional($.usage_declaration),
        $.constraint_body,
      ),

    connection_usage: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        optional('ref'),
        'connection',
        optional($.usage_declaration),
        optional($.connection_part),
        $.usage_body,
      ),

    connection_part: ($) =>
      choice(
        seq(
          'connect',
          $.connect_endpoint,
          'to',
          $.connect_endpoint,
        ),
        seq(
          'connect',
          '(',
          commaSep1($.nary_connect_endpoint),
          ')',
        ),
      ),

    nary_connect_endpoint: ($) =>
      choice(
        seq($.name, '::>', $.feature_chain),
        $.feature_chain,
      ),

    metadata_usage: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        choice('@', 'metadata'),
        choice(
          seq($.identification, $.typing_part),
          $.qualified_name,
        ),
        optional(seq('about', commaSep1($.qualified_name))),
        $.usage_body,
      ),

    usage_declaration: ($) =>
      choice(
        // Must have at least identification
        seq(
          $.identification,
          optional($.multiplicity),
          repeat(choice($.multiplicity, $.relationship_part, $.nonunique_modifier)),
          optional($.typing_part),
          repeat(choice($.multiplicity, $.relationship_part, $.nonunique_modifier)),
          optional($.value_part),
        ),
        // Or just typing (anonymous typed usage)
        seq(
          $.typing_part,
          repeat(choice($.multiplicity, $.relationship_part, $.nonunique_modifier)),
          optional($.value_part),
        ),
        // Or just specialization without typing
        prec.dynamic(100, seq(
          $.specialization_part,
          optional($.typing_part),
          repeat(choice($.multiplicity, $.relationship_part, $.nonunique_modifier)),
          optional($.value_part),
        )),
        // Or just a relationship (e.g., "part redefines cyl")
        seq(
          $.relationship_part,
          repeat(choice($.multiplicity, $.relationship_part, $.nonunique_modifier)),
          optional($.typing_part),
          repeat(choice($.multiplicity, $.relationship_part, $.nonunique_modifier)),
          optional($.value_part),
        ),
        // Or just multiplicity
        seq(
          $.multiplicity,
          repeat(choice($.multiplicity, $.relationship_part, $.nonunique_modifier)),
          optional($.value_part),
        ),
        // Or just value
        $.value_part,
      ),

    // =========================================================================
    // Typing (: Type)
    // =========================================================================
    typing_part: ($) =>
      seq(':', optional('~'), commaSep1($.qualified_name)),

    // =========================================================================
    // Definition Specialization (for definitions: :> or specializes)
    // =========================================================================
    definition_specialization: ($) =>
      choice(
        seq(':>', commaSep1($.qualified_name)),
        seq('specializes', commaSep1($.qualified_name)),
      ),

    // =========================================================================
    // Specialization (for usages without typing - lower precedence)
    // =========================================================================
    specialization_part: ($) =>
      prec(1, choice(
        seq(':>', commaSep1(choice($.feature_chain, $.qualified_name))),
        seq('specializes', commaSep1(choice($.feature_chain, $.qualified_name))),
      )),

    // =========================================================================
    // Relationship Parts (can follow typing or multiplicity - higher precedence)
    // =========================================================================
    relationship_part: ($) =>
      prec.left(2, choice(
        $.specialization_part,
        $.subsetting_part,
        $.redefinition_part,
        $.reference_part,
        $.defined_by_part,
        $.crosses_part,
      )),

    redefinition_part: ($) =>
      prec.right(seq(
        choice(':>>', 'redefines'),
        commaSep1(choice(
          seq($.qualified_name, repeat1(seq('.', $.name))),
          $.feature_chain,
          $.qualified_name,
        )),
        optional($.typing_part),
        optional($.value_part),
      )),

    multiplicity: ($) =>
      seq(
        '[',
        optional(choice(
          seq($.multiplicity_bound, '..', choice($.multiplicity_bound, '*')),
          $.multiplicity_bound,
          '*',
        )),
        ']',
      ),

    multiplicity_bound: ($) => choice($.integer_literal, $.identifier),

    value_part: ($) =>
      seq(
        choice('=', ':=', seq('default', '='), seq('default', ':='), 'default'),
        $._expression,
      ),

    // =========================================================================
    // Bodies
    // =========================================================================
    usage_body: ($) =>
      choice(';', seq('{', repeat($._usage_member), '}')),

    _usage_member: ($) =>
      choice(
        $._definition,
        $._usage,
        $.end_usage,
        $.connect_statement,
        $.bind_statement,
        $.flow_statement,
        $.stream_statement,
        $.succession_statement,
        $.first_statement,
        $.if_then_statement,
        $.then_if_block,
        $.done_statement,
        $.control_node,
        $.then_succession,
        $.perform_statement,
        $.terminate_statement,
        $.for_loop,
        $.assign_statement,
        $.send_statement,
        $.transition_statement,
        $.entry_statement,
        $.do_statement,
        $.exit_statement,
        $.accept_then_statement,
        $.comment_statement,
        $.documentation,
        $.redefines_statement,
        $.expression_statement,
        $.assert_statement,
        $.assume_statement,
        $.require_statement,
        $.subject_statement,
        $.satisfy_statement,
        $.return_statement,
        $.actor_usage,
        $.objective_usage,
        $.verify_statement,
        $.allocate_statement,
        $.import_statement,
        $.alias_statement,
        $.variant_usage,
        $.message_statement,
        $.include_statement,
        $.expose_statement,
        $.render_statement,
        $.filter_statement,
        $.textual_representation,
        $.specialization_statement,
      ),

    // =========================================================================
    // Context-Specific Members (TD-1)
    // =========================================================================

    // Base structural members - valid in part, item, port, connection, etc.
    structural_body: ($) =>
      choice(';', seq('{', repeat($._structural_member), '}')),

    constraint_body: ($) =>
      choice(
        ';',
        seq('{', repeat(choice($._structural_member, $.return_statement, $.opaque_body, $.textual_representation)), optional($._expression), '}'),
      ),

    prefix_metadata: ($) =>
      seq('#', $.qualified_name),
